--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,12 @@
                 <b style="font-size: 20px" id="Author">Created by GreyScales</b>
                 <input type="text" placeholder="Search" id="SearchBox", size="50" autofocus="autofocus">
             </container>
+            <searchOptions>
+                <github id="Selectable"><img src="Assets\Icons\github.svg"></github>
+                <stackOverflow id="Selectable"><img src="Assets\Icons\StackOverflow.svg"></imr></stackOverflow>
+                <W3Schools id="Selectable"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
+                <Google id="Selectable"><img src="Assets\Icons\Google.svg"></Google>
+            </searchOptions>
         </search>
     </body>
 
