--- a/ui/index.html
+++ b/ui/index.html
@@ -17,45 +17,16 @@
                 <input type="text" placeholder="Search" id="SearchBox", size="50" autofocus="autofocus">
             </container>
             <searchOptions>
-                <github id="Selectable"><img src="Assets\Icons\github.svg"></github>
-                <stackOverflow id="Selectable"><img src="Assets\Icons\StackOverflow.svg"></imr></stackOverflow>
-                <W3Schools id="Selectable"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
-                <Google id="Selectable"><img src="Assets\Icons\Google.svg"></Google>
+                <github id="github" class="Selectable"><img src="Assets\Icons\github.svg"></github>
+                <stackOverflow id="stackoverflow" class="Selectable"><img src="Assets\Icons\StackOverflow.svg"></imr></stackOverflow>
+                <W3Schools id="w3schools" class="Selectable"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
+                <Google id="google" class="Selectable"><img src="Assets\Icons\Google.svg"></Google>
             </searchOptions>
         </search>
     </body>
 
 
-    <script>
-        //set random background
-        const element = document.querySelector('html');
-        element.style.background = "url(Assets/" + Math.floor(Math.random() * 11) + ".jpg)";
-        element.style.backgroundRepeat = 'no-repeat';
-        element.style.backgroundSize = 'cover';
-        element.style.backgroundPosition = 'center';
-        element.style.minHeight = "100%";
-
-        // define tauri window
-        const { invoke } = window.__TAURI__.tauri
-
-
-
-
-        async function search(){
-            await invoke("search", {query: document.getElementById("SearchBox").value});
-        }
-
-
-        window.addEventListener("DOMContentLoaded", () => {
-            // define on enter press
-            document.getElementById('SearchBox').onkeypress=function(event){
-                if (event.keyCode==13){
-                    search();
-                }
-            }
-        })
-
-    </script>
+    <script src="index.js"></script>
 </section>
 
 </html>
