--- a/ui/index.html
+++ b/ui/index.html
@@ -17,10 +17,11 @@
                 <input type="text" placeholder="Search" id="SearchBox", size="50" autofocus="autofocus">
             </container>
             <searchOptions>
-                <github id="github" class="Selectable"><img src="Assets\Icons\github.svg"></github>
-                <stackOverflow id="stackoverflow" class="Selectable"><img src="Assets\Icons\StackOverflow.svg"></imr></stackOverflow>
-                <W3Schools id="w3schools" class="Selectable"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
-                <Google id="google" class="Selectable"><img src="Assets\Icons\Google.svg"></Google>
+                <github id="github" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\github.svg"></github>
+                <stackOverflow id="stackoverflow" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\StackOverflow.svg"></imr></stackOverflow>
+                <W3Schools id="w3schools" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
+                <Google id="google" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\Google.svg"></Google>
+                <Google id="google" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\Google.svg"></Google>
             </searchOptions>
         </search>
     </body>
