--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,6 @@
 <section>
     <body>
         <search>
-            
             <container>
                 <h1, id="MainTitle">Better Google</h1>
                 <b style="font-size: 20px" id="Author">Created by GreyScales</b>
@@ -22,8 +21,10 @@
                 <W3Schools id="w3schools" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\W3Schools.png" style="width:96px"></W3Schools>
                 <Google id="google" class="Selectable" onclick="toggle(this)"><img src="Assets\Icons\Google.svg"></Google>
             </searchOptions>
+            <popup id="popupText" style="visibility: hidden;">placeholder</popup>
         </search>
     </body>
+
 
 
     <script src="index.js"></script>
